# Provenance

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  PLAN.md  README.md  TASK.md  alembic.ini  main.py  pyproject.toml  requirements.txt
migrations/: env.py
migrations/versions/: 0a1e3fafd37f_initial_schema.py  d9cca56c69b2_add_perturbation_index_to_query_probe.py
provenance/: config.py
provenance/collectors/: base.py  citation.py  demand.py
provenance/core/: pipeline.py  query_generator.py  registry.py
provenance/models/: __init__.py  citation.py  data_point.py  database.py  demand_signal.py  divergence_score.py  entity.py  experiment.py  llm_signal.py  query_probe.py  run.py
provenance/probes/: anthropic.py  base.py  gemini.py  openai.py
thesis/: thesis_20260315.md
